# fundraisely

./: .env.example  .gitignore  ABOUT.md  BULLETPOINT_MANIFEST.md  CURRENT_CAPABILITIES.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  GAME_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  LICENSE  README.md  SOLANA_CONTRACT_REQUIREMENTS.html  SOLANA_CONTRACT_REQUIREMENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
backend/: .env.example  Cargo.toml
backend-axum/: Cargo.toml
backend-axum/src/: main.rs
backend-axum/src/handlers/: fees.rs  mod.rs  query.rs  transaction.rs  ws.rs
backend-axum/src/middleware/: auth.rs  mod.rs
backend-axum/src/models/: mod.rs
backend-axum/src/services/: mod.rs  solana.rs
backend-axum/src/utils/: mod.rs
backend/src/: main.rs
backend/src/config/: environment.rs  mod.rs
backend/src/handlers/: charity_handler.rs  health_handler.rs  mod.rs
backend/src/middleware/: cors.rs  mod.rs
backend/src/models/: charity.rs  donation_address.rs  mod.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs  tgb_client.rs
server/: README.md  (+3 more)
solana-program/fundraisely/programs/fundraisely/: Cargo.toml
solana-program/fundraisely/programs/fundraisely/src/: errors.rs  events.rs  lib.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/: mod.rs  utils.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/admin/: add_approved_token.rs  initialize.rs  initialize_token_registry.rs  mod.rs  recover_room.rs  remove_approved_token.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/asset/: add_prize_asset.rs  init_asset_room.rs  mod.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/game/: declare_winners.rs  end_room.rs  mod.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/player/: join_room.rs  mod.rs
solana-program/fundraisely/programs/fundraisely/src/instructions/room/: init_pool_room.rs  mod.rs
solana-program/fundraisely/programs/fundraisely/src/state/: global_config.rs  mod.rs  player_entry.rs  room.rs  token_registry.rs
(+201 files in other folders)
