[package]
name = "fundraisely-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["ws", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Solana (compatible with Anchor 0.30.1)
solana-client = "~1.17.3"
solana-sdk = "~1.17.3"
solana-transaction-status = "~1.17.3"

# Anchor (0.30.1 uses Solana 1.17)
anchor-client = "0.30.1"
anchor-lang = "0.30.1"

# SPL Token (compatible with Solana 1.17)
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Async runtime
futures-util = "0.3.31"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Utilities
bs58 = "0.5.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
