[package]
name = "fundraisely-tgb-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
