[package]
name = "fundraisely"
version = "0.1.0"
description = "Solana fundraising platform with quiz rooms and prize distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fundraisely"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
